<resources>
    <string name="app_name">Alura Viagens</string>
    <string name="banner_de_fundo_roxo">Banner de fundo roxo</string>
    <string name="especiais">Especiais</string>
    <string name="pais">Brasil</string>
    <string name="foto_do_local_de_viagem">Foto do local de viagem</string>
    <string name="imagem_do_pacote">imagem do pacote</string>
    <string name="preco_final">Preço Final:</string>
    <string name="realizar_pagamento">REALIZAR PAGAMENTO</string>
    <string name="mascara_nome_no_cartao" translatable="false">çÇãÂéÉêÊíÍ abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="orientacao_pagamento">Digite as informações do cartão de crédito que você deseja usar para o pagamento</string>
    <string name="valor_da_compra">Valor da compra:</string>
    <string name="numero_do_cartao">Número do cartão</string>
    <string name="mes_cartao" translatable="false">MM</string>
    <string name="ano_cartao" translatable="false">AA</string>
    <string name="cvc_pagamento" translatable="false">CVC</string>
    <string name="nome_no_cartao">Nome no cartão</string>
    <string name="finalizar_compra">Finalizar Compra</string>
    <string name="parabens">Parabéns!</string>
    <string name="compra_realizada_com_sucesso">Compra realizada com sucesso :)</string>
    <string name="confira_o_resumo_da_compra">Confira o resumo da compra:</string>
    <string name="banner_inicial" translatable="false">banner_inicial</string>
</resources>